fixed front page title on mobile

--- a/index.css
+++ b/index.css
@@ -65,6 +65,7 @@ a:hover {
 		font-size: 100px;
 		padding: none;
 		color: #F08C52;
+		margin-top: 5px;
 	}
 
 	#menu {
